[pulse:devbuild:1.21.4] Porting Pulse on 1.21.4