@@ -5,7 +5,6 @@ import org.bukkit.event.Cancellable;
 import org.bukkit.event.HandlerList;
 import org.bukkit.event.block.BlockEvent;
 import org.bukkit.inventory.ItemStack;
-import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 
 /**
@@ -14,21 +13,19 @@ import org.jetbrains.annotations.NotNull;
  * {@link org.bukkit.block.BlastFurnace}.
  */
 public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
-
-    private static final HandlerList HANDLER_LIST = new HandlerList();
-
+    private static final HandlerList handlers = new HandlerList();
     private final ItemStack fuel;
     private int burnTime;
-    private boolean burning = true;
-    private boolean consumeFuel = true;
-
     private boolean cancelled;
+    private boolean burning;
+    private boolean consumeFuel = true; // Paper
 
-    @ApiStatus.Internal
     public FurnaceBurnEvent(@NotNull final Block furnace, @NotNull final ItemStack fuel, final int burnTime) {
         super(furnace);
         this.fuel = fuel;
         this.burnTime = burnTime;
+        this.cancelled = false;
+        this.burning = true;
     }
 
     /**
@@ -38,7 +35,7 @@ public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
      */
     @NotNull
     public ItemStack getFuel() {
-        return this.fuel;
+        return fuel;
     }
 
     /**
@@ -47,7 +44,7 @@ public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
      * @return the burn time for this fuel
      */
     public int getBurnTime() {
-        return this.burnTime;
+        return burnTime;
     }
 
     /**
@@ -55,8 +52,8 @@ public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
      *
      * @param burnTime the burn time for this fuel
      */
-    public void setBurnTime(@org.jetbrains.annotations.Range(from = Short.MIN_VALUE, to = Short.MAX_VALUE) int burnTime) {
-        this.burnTime = Math.clamp(burnTime, Short.MIN_VALUE, Short.MAX_VALUE);
+    public void setBurnTime(@org.jetbrains.annotations.Range(from = Short.MIN_VALUE, to = Short.MAX_VALUE) int burnTime) { // Paper
+        this.burnTime = Math.max(Short.MIN_VALUE, Math.min(Short.MAX_VALUE, burnTime)); // Paper
     }
 
     /**
@@ -71,33 +68,34 @@ public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
     /**
      * Sets whether the furnace's fuel is burning or not.
      *
-     * @param burning {@code true} if the furnace's fuel is burning
+     * @param burning true if the furnace's fuel is burning
      */
     public void setBurning(boolean burning) {
         this.burning = burning;
     }
-
+    // Paper start
     /**
      * Gets whether the furnace's fuel will be consumed or not.
      *
      * @return whether the furnace's fuel will be consumed
      */
     public boolean willConsumeFuel() {
-        return this.consumeFuel;
+        return consumeFuel;
     }
 
     /**
      * Sets whether the furnace's fuel will be consumed or not.
      *
-     * @param consumeFuel {@code true} to consume the fuel
+     * @param consumeFuel true to consume the fuel
      */
     public void setConsumeFuel(boolean consumeFuel) {
         this.consumeFuel = consumeFuel;
     }
+    // Paper end
 
     @Override
     public boolean isCancelled() {
-        return this.cancelled;
+        return cancelled;
     }
 
     @Override
@@ -108,11 +106,11 @@ public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
     @NotNull
     @Override
     public HandlerList getHandlers() {
-        return HANDLER_LIST;
+        return handlers;
     }
 
     @NotNull
     public static HandlerList getHandlerList() {
-        return HANDLER_LIST;
+        return handlers;
     }
 }
