@@ -7,20 +7,15 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import com.mojang.logging.LogUtils;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.resources.ResourceKey;
-import net.minecraft.util.ProblemReporter;
-import net.minecraft.util.random.Weighted;
-import net.minecraft.util.random.WeightedList;
-import net.minecraft.world.entity.Entity;
+import net.minecraft.util.random.SimpleWeightedRandomList;
+import net.minecraft.util.random.WeightedEntry.Wrapper;
 import net.minecraft.world.level.SpawnData;
 import net.minecraft.world.level.block.entity.TrialSpawnerBlockEntity;
 import net.minecraft.world.level.block.entity.trialspawner.TrialSpawnerConfig;
-import net.minecraft.world.level.block.entity.trialspawner.TrialSpawnerStateData;
-import net.minecraft.world.level.storage.TagValueInput;
-import net.minecraft.world.level.storage.TagValueOutput;
+import net.minecraft.world.level.block.entity.trialspawner.TrialSpawnerData;
 import org.bukkit.block.spawner.SpawnRule;
 import org.bukkit.block.spawner.SpawnerEntry;
 import org.bukkit.craftbukkit.CraftLootTable;
@@ -30,12 +25,8 @@ import org.bukkit.entity.EntitySnapshot;
 import org.bukkit.entity.EntityType;
 import org.bukkit.loot.LootTable;
 import org.bukkit.spawner.TrialSpawnerConfiguration;
-import org.slf4j.Logger;
 
 public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration {
-
-    private static final Logger LOGGER = LogUtils.getLogger();
-
     private final TrialSpawnerBlockEntity snapshot;
 
     private int spawnRange;
@@ -44,8 +35,8 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
     private float totalMobsAddedPerPlayer;
     private float simultaneousMobsAddedPerPlayer;
     private int ticksBetweenSpawn;
-    private WeightedList<SpawnData> spawnPotentialsDefinition;
-    private WeightedList<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> lootTablesToEject;
+    private SimpleWeightedRandomList<SpawnData> spawnPotentialsDefinition;
+    private SimpleWeightedRandomList<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> lootTablesToEject;
     private ResourceKey<net.minecraft.world.level.storage.loot.LootTable> itemsToDropWhenOminous;
 
     public CraftTrialSpawnerConfiguration(TrialSpawnerConfig minecraft, TrialSpawnerBlockEntity snapshot) {
@@ -64,36 +55,27 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
 
     @Override
     public EntityType getSpawnedType() {
-        if (this.spawnPotentialsDefinition.isEmpty()) {
-            return null;
-        }
+       if (this.spawnPotentialsDefinition.isEmpty()) {
+           return null;
+       }
 
-        try (final ProblemReporter.ScopedCollector problemReporter = new ProblemReporter.ScopedCollector(
-            () -> "TrialSpawnerConfiguration@" + snapshot.getBlockPos().toShortString(), LOGGER
-        )) {
-            Optional<net.minecraft.world.entity.EntityType<?>> type = net.minecraft.world.entity.EntityType.by(
-                TagValueInput.createGlobal(
-                    problemReporter,
-                    this.spawnPotentialsDefinition.unwrap().getFirst().value().getEntityToSpawn()
-                )
-            );
-            return type.map(CraftEntityType::minecraftToBukkit).orElse(null);
-        }
+       Optional<net.minecraft.world.entity.EntityType<?>> type = net.minecraft.world.entity.EntityType.by(this.spawnPotentialsDefinition.unwrap().get(0).data().getEntityToSpawn());
+       return type.map(CraftEntityType::minecraftToBukkit).orElse(null);
     }
 
     @Override
     public void setSpawnedType(EntityType entityType) {
         if (entityType == null) {
             this.getTrialData().nextSpawnData = Optional.empty();
-            this.spawnPotentialsDefinition = WeightedList.of(); // need clear the spawnPotentials to avoid nextSpawnData being replaced later
+            this.spawnPotentialsDefinition = SimpleWeightedRandomList.empty(); // need clear the spawnPotentials to avoid nextSpawnData being replaced later
             return;
         }
         Preconditions.checkArgument(entityType != EntityType.UNKNOWN, "Can't spawn EntityType %s from mob spawners!", entityType);
 
         SpawnData data = new SpawnData();
-        data.getEntityToSpawn().putString(Entity.TAG_ID, BuiltInRegistries.ENTITY_TYPE.getKey(CraftEntityType.bukkitToMinecraft(entityType)).toString());
+        data.getEntityToSpawn().putString("id", BuiltInRegistries.ENTITY_TYPE.getKey(CraftEntityType.bukkitToMinecraft(entityType)).toString());
         this.getTrialData().nextSpawnData = Optional.of(data);
-        this.spawnPotentialsDefinition = WeightedList.of(data);
+        this.spawnPotentialsDefinition = SimpleWeightedRandomList.single(data);
     }
 
     @Override
@@ -138,7 +120,7 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
 
     @Override
     public int getDelay() {
-        return this.ticksBetweenSpawn;
+      return this.ticksBetweenSpawn;
     }
 
     @Override
@@ -160,12 +142,12 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
 
     @Override
     public EntitySnapshot getSpawnedEntity() {
-        WeightedList<SpawnData> potentials = this.spawnPotentialsDefinition;
+        SimpleWeightedRandomList<SpawnData> potentials = this.spawnPotentialsDefinition;
         if (potentials.isEmpty()) {
             return null;
         }
 
-        return CraftEntitySnapshot.create(potentials.unwrap().get(0).value().getEntityToSpawn());
+        return CraftEntitySnapshot.create(potentials.unwrap().get(0).data().getEntityToSpawn());
     }
 
     @Override
@@ -183,7 +165,7 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
     private void setSpawnedEntity(EntitySnapshot snapshot, SpawnRule spawnRule, SpawnerEntry.Equipment equipment) {
         if (snapshot == null) {
             this.getTrialData().nextSpawnData = Optional.empty();
-            this.spawnPotentialsDefinition = WeightedList.of(); // need clear the spawnPotentials to avoid nextSpawnData being replaced later
+            this.spawnPotentialsDefinition = SimpleWeightedRandomList.empty(); // need clear the spawnPotentials to avoid nextSpawnData being replaced later
             return;
         }
 
@@ -191,7 +173,7 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
         SpawnData data = new SpawnData(compoundTag, Optional.ofNullable(CraftCreatureSpawner.toMinecraftRule(spawnRule)), CraftCreatureSpawner.getEquipment(equipment));
 
         this.getTrialData().nextSpawnData = Optional.of(data);
-        this.spawnPotentialsDefinition = WeightedList.of(data);
+        this.spawnPotentialsDefinition = SimpleWeightedRandomList.single(data);
     }
 
     @Override
@@ -204,8 +186,8 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
 
         CompoundTag compoundTag = ((CraftEntitySnapshot) snapshot).getData();
 
-        WeightedList.Builder<SpawnData> builder = WeightedList.builder();
-        this.spawnPotentialsDefinition.unwrap().forEach(entry -> builder.add(entry.value(), entry.weight()));
+        SimpleWeightedRandomList.Builder<SpawnData> builder = SimpleWeightedRandomList.builder(); // PAIL rename Builder
+        this.spawnPotentialsDefinition.unwrap().forEach(entry -> builder.add(entry.data(), entry.getWeight().asInt()));
         builder.add(new SpawnData(compoundTag, Optional.ofNullable(CraftCreatureSpawner.toMinecraftRule(spawnRule)), CraftCreatureSpawner.getEquipment(equipment)), weight);
         this.spawnPotentialsDefinition = builder.build();
     }
@@ -221,7 +203,7 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
     public void setPotentialSpawns(Collection<SpawnerEntry> entries) {
         Preconditions.checkArgument(entries != null, "Entries cannot be null");
 
-        WeightedList.Builder<SpawnData> builder = WeightedList.builder();
+        SimpleWeightedRandomList.Builder<SpawnData> builder = SimpleWeightedRandomList.builder();
         for (SpawnerEntry spawnerEntry : entries) {
             CompoundTag compoundTag = ((CraftEntitySnapshot) spawnerEntry.getSnapshot()).getData();
             builder.add(new SpawnData(compoundTag, Optional.ofNullable(CraftCreatureSpawner.toMinecraftRule(spawnerEntry.getSpawnRule())), CraftCreatureSpawner.getEquipment(spawnerEntry.getEquipment())), spawnerEntry.getSpawnWeight());
@@ -233,12 +215,12 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
     public List<SpawnerEntry> getPotentialSpawns() {
         List<SpawnerEntry> entries = new ArrayList<>();
 
-        for (Weighted<SpawnData> entry : this.spawnPotentialsDefinition.unwrap()) {
-            CraftEntitySnapshot snapshot = CraftEntitySnapshot.create(entry.value().getEntityToSpawn());
+        for (Wrapper<SpawnData> entry : this.spawnPotentialsDefinition.unwrap()) { // PAIL rename Wrapper
+            CraftEntitySnapshot snapshot = CraftEntitySnapshot.create(entry.data().getEntityToSpawn());
 
             if (snapshot != null) {
-                SpawnRule rule = entry.value().customSpawnRules().map(CraftCreatureSpawner::fromMinecraftRule).orElse(null);
-                entries.add(new SpawnerEntry(snapshot, entry.weight(), rule));
+                SpawnRule rule = entry.data().customSpawnRules().map(CraftCreatureSpawner::fromMinecraftRule).orElse(null);
+                entries.add(new SpawnerEntry(snapshot, entry.getWeight().asInt(), rule));
             }
         }
         return entries;
@@ -248,10 +230,10 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
     public Map<LootTable, Integer> getPossibleRewards() {
         Map<LootTable, Integer> tables = new HashMap<>();
 
-        for (Weighted<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> entry : this.lootTablesToEject.unwrap()) {
-            LootTable table = CraftLootTable.minecraftToBukkit(entry.value());
+        for (Wrapper<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> entry : this.lootTablesToEject.unwrap()) {
+            LootTable table = CraftLootTable.minecraftToBukkit(entry.data());
             if (table != null) {
-                tables.put(table, entry.weight());
+                tables.put(table, entry.getWeight().asInt());
             }
         }
 
@@ -263,8 +245,8 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
         Preconditions.checkArgument(table != null, "Table cannot be null");
         Preconditions.checkArgument(weight >= 1, "Weight must be at least 1");
 
-        WeightedList.Builder<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> builder = WeightedList.builder();
-        this.lootTablesToEject.unwrap().forEach(entry -> builder.add(entry.value(), entry.weight()));
+        SimpleWeightedRandomList.Builder<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> builder = SimpleWeightedRandomList.builder();
+        this.lootTablesToEject.unwrap().forEach(entry -> builder.add(entry.data(), entry.getWeight().asInt()));
         builder.add(CraftLootTable.bukkitToMinecraft(table), weight);
         this.lootTablesToEject = builder.build();
     }
@@ -274,11 +256,11 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
         Preconditions.checkArgument(table != null, "Key cannot be null");
 
         ResourceKey<net.minecraft.world.level.storage.loot.LootTable> minecraftKey = CraftLootTable.bukkitToMinecraft(table);
-        WeightedList.Builder<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> builder = WeightedList.builder();
+        SimpleWeightedRandomList.Builder<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> builder = SimpleWeightedRandomList.builder();
 
-        for (Weighted<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> entry : this.lootTablesToEject.unwrap()) {
-            if (!entry.value().equals(minecraftKey)) {
-                builder.add(entry.value(), entry.weight());
+        for (Wrapper<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> entry : this.lootTablesToEject.unwrap()) {
+            if (!entry.data().equals(minecraftKey)) {
+                builder.add(entry.data(), entry.getWeight().asInt());
             }
         }
         this.lootTablesToEject = builder.build();
@@ -287,11 +269,11 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
     @Override
     public void setPossibleRewards(Map<LootTable, Integer> rewards) {
         if (rewards == null || rewards.isEmpty()) {
-            this.lootTablesToEject = WeightedList.of();
+            this.lootTablesToEject = SimpleWeightedRandomList.empty();
             return;
         }
 
-        WeightedList.Builder<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> builder = WeightedList.builder();
+        SimpleWeightedRandomList.Builder<ResourceKey<net.minecraft.world.level.storage.loot.LootTable>> builder = SimpleWeightedRandomList.builder();
         rewards.forEach((table, weight) -> {
             Preconditions.checkArgument(table != null, "Table cannot be null");
             Preconditions.checkArgument(weight >= 1, "Weight must be at least 1");
@@ -304,16 +286,16 @@ public class CraftTrialSpawnerConfiguration implements TrialSpawnerConfiguration
 
     @Override
     public int getRequiredPlayerRange() {
-        return this.snapshot.trialSpawner.getRequiredPlayerRange();
+      return this.snapshot.trialSpawner.getRequiredPlayerRange();
     }
 
     @Override
     public void setRequiredPlayerRange(int requiredPlayerRange) {
-        this.snapshot.trialSpawner.config = this.snapshot.trialSpawner.config.overrideRequiredPlayerRange(requiredPlayerRange);
+        this.snapshot.trialSpawner.requiredPlayerRange = requiredPlayerRange;
     }
 
-    private TrialSpawnerStateData getTrialData() {
-        return this.snapshot.getTrialSpawner().getStateData();
+    private TrialSpawnerData getTrialData() {
+        return this.snapshot.getTrialSpawner().getData();
     }
 
     protected TrialSpawnerConfig toMinecraft() {
